# sim-agent-platform

./: .gitignore  README.md  pyproject.toml
docs/: mcp_server_template.py
src/sim_agent/: __init__.py
src/sim_agent/adapters/: base_diagnostics.py  base_parser.py  knowledge_bridge.py  mcp_wizard.py  model_learner.py
src/sim_agent/core/: experience_store.py  template_store.py
src/sim_agent/skills/: SKILL.md
tests/: test_all.py  test_wizard.py  test_wizard7.py
